--- a/md2pdf/.envrc.local
+++ b/md2pdf/.envrc.local
@@ -1,5 +1,5 @@
 
 #!/bin/bash
 
-export DILLINGER_VERSION=$(image-tags.sh docker.io linuxserver/dillinger | egrep "^[0-9]+\.[0-9]+\.[0-9]+$" | sort -Vr | head -n 1 )
+export DILLINGER_VERSION=$(image-tags docker.io linuxserver/dillinger | egrep "^[0-9]+\.[0-9]+\.[0-9]+$" | sort -Vr | head -n 1 )
 echo DILLINGER_VERSION="${DILLINGER_VERSION}"
