--- a/pulsar/docker-compose.yml
+++ b/pulsar/docker-compose.yml
@@ -8,7 +8,7 @@ volumes:
     driver: local
   bookkeeper:
     driver: local
-        
+
 services:
   # Do a chown of bookkeeper & zookeeper volumes
   # https://pulsar.apache.org/docs/3.2.x/getting-started-docker-compose/#step-2-create-a-pulsar-cluster
@@ -23,32 +23,8 @@ services:
     entrypoint: ["/usr/bin/bash","-c"]
     command:
       - |
-        chown -R 10000 /tmp/zookeeper 
+        chown -R 10000 /tmp/zookeeper
         chown -R 10000 /tmp/bookkeeper
-
-  # ui_setup:
-  #   image: ubuntu:jammy
-  #   container_name: ui_setup
-  #   user: root
-  #   restart: "no"
-  #   depends_on:
-  #     pulsar_ui:
-  #       condition: service_healthy
-  #   networks:
-  #     - pulsar
-  #   entrypoint: ["/usr/bin/bash","-c"]
-  #   command: 
-  #     - |
-  #       apt-get -y -qqq update && \
-  #         apt-get install --no-install-recommends -qqq -y curl >/dev/null 2>&1 && \
-  #         rm -rf /var/lib/apt/lists/*
-  #       CSRF_TOKEN=$(curl -s http://pulsar_ui:7750/pulsar-manager/csrf-token)
-  #       curl -s \
-  #         -H 'X-XSRF-TOKEN: $$CSRF_TOKEN' \
-  #         -H 'Cookie: XSRF-TOKEN=$$CSRF_TOKEN;' \
-  #         -H "Content-Type: application/json" \
-  #         -X PUT http://pulsar_ui:7750/pulsar-manager/users/superuser \
-  #         -d '{"name": "admin", "password": "apachepulsar", "description": "test", "email": "username@test.org"}'
 
   # Start zookeeper
   # @see cluster_file_perms
@@ -118,7 +94,7 @@ services:
       pulsar-init:
         condition: service_completed_successfully
       cluster_file_perms:
-        condition: service_completed_successfully        
+        condition: service_completed_successfully
     # Map the local directory to the container to avoid bookie startup failure due to insufficient container disks.
     volumes:
       - bookkeeper:/pulsar/data/bookkeeper
@@ -165,12 +141,12 @@ services:
       - JAVA_TOOL_OPTIONS=-Xms512m -Xmx512m
     ports:
       - "9527:9527"
-      - "7750:7750"    
+      - "7750:7750"
     healthcheck:
       test:
         [
           "CMD-SHELL",
-          "curl -s -I http://localhost:7750/pulsar-manager/csrf-token | grep -q 'HTTP/1.1 200'",
+          "curl -s -I http://localhost:7750/swagger-ui.html | grep -q 'HTTP/1.1 200'",
         ]
       interval: 30s
       timeout: 10s
