--- a/plantuml/docker-compose.yml
+++ b/plantuml/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: plantuml/plantuml-server:${PLANTUML_VERSION}
     ports:
       - "58080:8080"
+    environment:
+      - JAVA_TOOL_OPTIONS=-Xms512m -Xmx2024m -XX:+ExitOnOutOfMemoryError
     networks:
       - plantuml
 
