--- a/pulsar/docker-compose.yml
+++ b/pulsar/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       # otherwise every time we run docker compose uo or down we fail to start due to Cookie
       # See: https://github.com/apache/bookkeeper/blob/405e72acf42bb1104296447ea8840d805094c787/bookkeeper-server/src/main/java/org/apache/bookkeeper/bookie/Cookie.java#L57-68
       - advertisedAddress=bookie
-      - BOOKIE_MEM=-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m
+      - BOOKIE_MEM=-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m -XX:+ExitOnOutOfMemoryError
     depends_on:
       zookeeper:
         condition: service_healthy
@@ -117,7 +117,7 @@ services:
       - managedLedgerDefaultAckQuorum=1
       - advertisedAddress=broker
       - advertisedListeners=external:pulsar://127.0.0.1:6650
-      - PULSAR_MEM=-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m
+      - PULSAR_MEM=-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m -XX:+ExitOnOutOfMemoryError
     depends_on:
       zookeeper:
         condition: service_healthy
@@ -138,7 +138,7 @@ services:
       - pulsar
     environment:
       - SPRING_CONFIGURATION_FILE=/pulsar-manager/pulsar-manager/application.properties
-      - JAVA_TOOL_OPTIONS=-Xms512m -Xmx512m
+      - JAVA_TOOL_OPTIONS=-Xms512m -Xmx512m -XX:+ExitOnOutOfMemoryError
     ports:
       - "9527:9527"
       - "7750:7750"
